src/app/render/snapshots/spyc__app__render__render_tests__snapshot_frame_second_commander.snap
---
source: src/app/render/mod.rs
expression: "render_to_string(&mut app, 80, 24)"
---
 🌶️   /projects/other                                                           
  README.md                            │  lib.rs                                
  Cargo.toml                           │  main.rs                               
  src                                  │  mod.rs                                
  tests                                │                                        
  docs                                 │                                        
  BUGS.md                              │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
                                       │                                        
second commander (^s x / ^d to close)
