src/app/render/snapshots/spyc__app__render__render_tests__snapshot_frame_status_bottom.snap
---
source: src/app/render/mod.rs
expression: "render_to_string(&mut app, 80, 24)"
---
  README.md                                                                     
  Cargo.toml                                                                    
  src                                                                           
  tests                                                                         
  docs                                                                          
  BUGS.md                                                                       
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 🌶️   /projects/demo 
