src/app/render/snapshots/spyc__app__render__render_tests__snapshot_frame_vsplit_preview_full_height.snap
---
source: src/app/render/mod.rs
expression: "render_to_string(&mut app, 80, 24)"
---
 🌶️   /projects/demo                   │┌  preview.md   (30 lines)  ───────────┐
  README.md                            ││ 1 preview line 0                     │
  Cargo.toml                           ││ 2 preview line 1                     │
  src                                  ││ 3 preview line 2                     │
  tests                                ││ 4 preview line 3                     │
  docs                                 ││ 5 preview line 4                     │
  BUGS.md                              ││ 6 preview line 5                     │
                                       ││ 7 preview line 6                     │
                                       ││ 8 preview line 7                     │
                                       ││ 9 preview line 8                     │
                                       ││10 preview line 9                     │
                                       ││11 preview line 10                    │
                                       ││12 preview line 11                    │
                                       ││13 preview line 12                    │
                                       ││14 preview line 13                    │
                                       ││15 preview line 14                    │
                                       ││16 preview line 15                    │
                                       ││17 preview line 16                    │
                                       ││18 preview line 17                    │
                                       ││19 preview line 18                    │
                                       ││20 preview line 19                    │
                                       ││21 preview line 20                    │
                                       ││22 preview line 21                    │
                                       │└───────────────────────────────  Top  ┘
